// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cribbage descriptors — snapshot matrix > mobileLandscape / counting resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.countingRow",
        "cribbage.cribCutGroup",
      ],
    },
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.countingRow",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.cribCutGroup",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 7,
        "w": 180,
        "x": 0,
        "y": 8,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 12,
        "w": 100,
        "x": 56,
        "y": 85,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.countingRow",
      "rect": {
        "h": 18,
        "w": 108,
        "x": 36,
        "y": 36,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 67,
        "w": 50.25,
        "x": 52.25,
        "y": 15,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 30,
        "w": 36,
        "x": 72,
        "y": 15.2,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 67,
        "w": 50.25,
        "x": 2,
        "y": 15,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 5,
        "w": 34.76,
        "x": 103.59,
        "y": 2.5,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 84,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 158.6,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 83,
        "y": 17.86,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 7.4,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 4,
        "w": 41.66,
        "x": 138.34,
        "y": 3,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 24,
        "w": 144,
        "x": 18,
        "y": 33,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 81,
        "y": 69.14,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 6,
        "w": 103.59,
        "x": 0,
        "y": 2,
      },
      "visible": true,
    },
  ],
}
`;

exports[`cribbage descriptors — snapshot matrix > mobileLandscape / pegging resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.cribCutGroup",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.pegboard",
        "cribbage.peggingRow",
      ],
    },
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 7,
        "w": 180,
        "x": 0,
        "y": 8,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 12,
        "w": 100,
        "x": 56,
        "y": 85,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 67,
        "w": 50.25,
        "x": 52.25,
        "y": 15,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 30,
        "w": 36,
        "x": 72,
        "y": 15.2,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 67,
        "w": 50.25,
        "x": 2,
        "y": 15,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 5,
        "w": 34.76,
        "x": 103.59,
        "y": 2.5,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 84,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 158.6,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 83,
        "y": 17.86,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 7.4,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 4,
        "w": 41.66,
        "x": 138.34,
        "y": 3,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 24,
        "w": 144,
        "x": 18,
        "y": 33,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.peggingRow",
      "rect": {
        "h": 32.4,
        "w": 153,
        "x": 13.5,
        "y": 46.56,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 81,
        "y": 69.14,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 6,
        "w": 103.59,
        "x": 0,
        "y": 2,
      },
      "visible": true,
    },
  ],
}
`;

exports[`cribbage descriptors — snapshot matrix > mobilePortrait / counting resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.countingRow",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 8,
        "w": 100,
        "x": 0,
        "y": 9,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.countingRow",
      "rect": {
        "h": 10,
        "w": 60,
        "x": 20,
        "y": 77.5,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 83.69,
        "w": 62.77,
        "x": 18.62,
        "y": 72.31,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 16.67,
        "w": 20,
        "x": 40,
        "y": 44.77,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 55.31,
        "w": 41.48,
        "x": 29.26,
        "y": 17,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 161,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 85,
        "y": 86,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 43,
        "y": 27.62,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 1,
        "y": 86,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 13.33,
        "w": 80,
        "x": 10,
        "y": 75.83,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 41,
        "y": 139.38,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 7,
        "w": 100,
        "x": 0,
        "y": 2,
      },
      "visible": true,
    },
  ],
}
`;

exports[`cribbage descriptors — snapshot matrix > mobilePortrait / pegging resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 8,
        "w": 100,
        "x": 0,
        "y": 9,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 83.69,
        "w": 62.77,
        "x": 18.62,
        "y": 72.31,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 16.67,
        "w": 20,
        "x": 40,
        "y": 44.77,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 55.31,
        "w": 41.48,
        "x": 29.26,
        "y": 17,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 161,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 85,
        "y": 86,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 43,
        "y": 27.62,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 1,
        "y": 86,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 13.33,
        "w": 80,
        "x": 10,
        "y": 75.83,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.peggingRow",
      "rect": {
        "h": 18,
        "w": 85,
        "x": 7.5,
        "y": 108.78,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 41,
        "y": 139.38,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 7,
        "w": 100,
        "x": 0,
        "y": 2,
      },
      "visible": true,
    },
  ],
}
`;

exports[`cribbage descriptors — snapshot matrix > tabletLandscape / counting resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.countingRow",
        "cribbage.cribCutGroup",
      ],
    },
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.countingRow",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.cribCutGroup",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 7,
        "w": 140,
        "x": 0,
        "y": 9,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.countingRow",
      "rect": {
        "h": 14,
        "w": 84,
        "x": 28,
        "y": 39.5,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 68,
        "w": 51,
        "x": 53,
        "y": 16,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 23.33,
        "w": 28,
        "x": 56,
        "y": 19.83,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 68,
        "w": 51,
        "x": 2,
        "y": 16,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 5,
        "w": 18,
        "x": 100,
        "y": 3.5,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 85,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 121.8,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 63,
        "y": 17.44,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 4.2,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 4,
        "w": 22,
        "x": 118,
        "y": 4,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 18.67,
        "w": 112,
        "x": 14,
        "y": 37.17,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 61,
        "y": 69.56,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 6,
        "w": 100,
        "x": 0,
        "y": 3,
      },
      "visible": true,
    },
  ],
}
`;

exports[`cribbage descriptors — snapshot matrix > tabletLandscape / pegging resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.cribCutGroup",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.pegboard",
        "cribbage.peggingRow",
      ],
    },
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 7,
        "w": 140,
        "x": 0,
        "y": 9,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 68,
        "w": 51,
        "x": 53,
        "y": 16,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 23.33,
        "w": 28,
        "x": 56,
        "y": 19.83,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 68,
        "w": 51,
        "x": 2,
        "y": 16,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 5,
        "w": 18,
        "x": 100,
        "y": 3.5,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 85,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 121.8,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 63,
        "y": 17.44,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 4.2,
        "y": 46,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 4,
        "w": 22,
        "x": 118,
        "y": 4,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 18.67,
        "w": 112,
        "x": 14,
        "y": 37.17,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.peggingRow",
      "rect": {
        "h": 25.2,
        "w": 119,
        "x": 10.5,
        "y": 51.9,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 61,
        "y": 69.56,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 6,
        "w": 100,
        "x": 0,
        "y": 3,
      },
      "visible": true,
    },
  ],
}
`;

exports[`cribbage descriptors — snapshot matrix > tabletPortrait / counting resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "anchored_siblings_overlap",
      "ids": [
        "cribbage.countingRow",
        "cribbage.pegboard",
      ],
    },
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 8,
        "w": 100,
        "x": 0,
        "y": 10,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.countingRow",
      "rect": {
        "h": 10,
        "w": 60,
        "x": 20,
        "y": 60,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 60.92,
        "w": 45.69,
        "x": 27.15,
        "y": 59.08,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 16.67,
        "w": 20,
        "x": 40,
        "y": 34.67,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 41.08,
        "w": 30.81,
        "x": 34.6,
        "y": 18,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 123,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 85,
        "y": 66,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 43,
        "y": 23.16,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 1,
        "y": 66,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 13.33,
        "w": 80,
        "x": 10,
        "y": 58.33,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 41,
        "y": 103.84,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 7,
        "w": 100,
        "x": 0,
        "y": 3,
      },
      "visible": true,
    },
  ],
}
`;

exports[`cribbage descriptors — snapshot matrix > tabletPortrait / pegging resolves deterministically 1`] = `
{
  "faults": [
    {
      "code": "safe_area_collision",
      "ids": [
        "cribbage.spotlight",
      ],
    },
  ],
  "placements": [
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.announcement",
      "rect": {
        "h": 8,
        "w": 100,
        "x": 0,
        "y": 10,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.bottomHud",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.crib",
      "rect": {
        "h": 60.92,
        "w": 45.69,
        "x": 27.15,
        "y": 59.08,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cribCutGroup",
      "rect": {
        "h": 16.67,
        "w": 20,
        "x": 40,
        "y": 34.67,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.cutCard",
      "rect": {
        "h": 41.08,
        "w": 30.81,
        "x": 34.6,
        "y": 18,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.gameTitle",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.myHand",
      "rect": {
        "h": 14,
        "w": 56,
        "x": 0,
        "y": 123,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.1",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 85,
        "y": 66,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.2",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 43,
        "y": 23.16,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.opponentCardBacks.3",
      "rect": {
        "h": 8,
        "w": 14,
        "x": 1,
        "y": 66,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.parameterChips",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.pegboard",
      "rect": {
        "h": 13.33,
        "w": 80,
        "x": 10,
        "y": 58.33,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": true,
      "collapsedReason": undefined,
      "id": "cribbage.peggingRow",
      "rect": {
        "h": 18,
        "w": 85,
        "x": 7.5,
        "y": 82.4,
      },
      "visible": true,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "dependencyMissing",
      "id": "cribbage.spotlight",
      "rect": {
        "h": 18,
        "w": 18,
        "x": 41,
        "y": 103.84,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": "pressure",
      "id": "cribbage.tabs",
      "rect": {
        "h": 0,
        "w": 0,
        "x": 0,
        "y": 0,
      },
      "visible": false,
    },
    {
      "appliedAspectRatio": false,
      "collapsedReason": undefined,
      "id": "cribbage.topHud",
      "rect": {
        "h": 7,
        "w": 100,
        "x": 0,
        "y": 3,
      },
      "visible": true,
    },
  ],
}
`;
